# chamo_db

./: .gitignore  README.md
map_viewer/map_viewer/: DetailViewController.h  DetailViewController.mm  Info.plist  LocAlgo.h  LocAlgo.mm  ViewController.h  ViewController.mm
map_viewer/map_viewer.xcodeproj/: project.pbxproj
map_viewer/map_viewer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
map_viewer/map_viewer.xcodeproj/xcshareddata/xcschemes/: data_recorder.xcscheme
map_viewer/map_viewer/Base.lproj/: Main.storyboard
map_viewer/map_viewer/algorithms/feature-tracking/include/feature-tracking/: feature-tracking-pipeline.h
map_viewer/map_viewer/algorithms/feature-tracking/src/: feature-detection-extraction.cc  feature-tracking-pipeline.cc  feature-tracking-types.cc  vo-feature-tracking-pipeline.cc
map_viewer/map_viewer/algorithms/landmark-triangulation/include/landmark-triangulation/: pose-interpolator.h
map_viewer/map_viewer/algorithms/landmark-triangulation/src/: pose-interpolator.cc
map_viewer/map_viewer/algorithms/loopclosure/loop-closure-handler/src/: loop-closure-handler.cc  loop-detector-node.cc
map_viewer/map_viewer/algorithms/loopclosure/matching-based-loopclosure/src/: detector-settings.cc  matching-based-engine.cc
map_viewer/map_viewer/algorithms/map-sparsification/include/map-sparsification/: graph-partition-sampler.h
map_viewer/map_viewer/algorithms/map-sparsification/src/: graph-partition-sampler.cc
map_viewer/map_viewer/algorithms/vi-map-helpers/include/vi-map-helpers/: spatial-database.h  vi-map-nearest-neighbor-lookup.h
map_viewer/map_viewer/aslam_cv2/aslam_cv_cameras/src/: ncamera.cc
map_viewer/map_viewer/aslam_cv2/aslam_cv_frames/src/: visual-nframe.cc
map_viewer/map_viewer/aslam_cv2/aslam_cv_pipeline/src/: visual-pipeline-freak.cc
map_viewer/map_viewer/backend/map-resources/include/map-resources/: optional-sensor-resources.h
map_viewer/map_viewer/backend/map-resources/src/: resource-loader.cc
map_viewer/map_viewer/common/maplab-common/include/maplab-common/: temporal-buffer.h
map_viewer/map_viewer/common/vio-common/include/vio-common/: imu-measurements-buffer.h  vio-types.h  vio-update.h
map_viewer/map_viewer/common/vio-common/src/: rostopic-settings.cc
map_viewer/map_viewer/config/: imu.yaml  ncamera.yaml  ncamera_ios.yaml  rovio_default_config.info
map_viewer/map_viewer/map-structure/sensors/src/: imu.cc
map_viewer/map_viewer/map-structure/vi-map/include/vi-map/: landmark-index.h  vertex.h  (+2 more)
map_viewer/map_viewer/map-structure/vi-map/src/: check-map-consistency.cc  vertex.cc
map_viewer/map_viewer/pb.cc/: camera.pb.cc  eigen.pb.cc  id.pb.cc  inverted_multi_index.pb.cc  keyframing-heuristics-options.pb.cc  localization-summary-map.pb.cc  loop_detector_node.pb.cc  matching_based_loop_detector.pb.cc  measurements.pb.cc  optional_camera_resources.pb.cc  projected_image.pb.cc  resource_info_map.pb.cc  resource_metadata.pb.cc  vi_map.pb.cc  vi_map_deprecated.pb.cc  vio_types.pb.cc  vio_update.pb.cc  visual-frame.pb.cc
map_viewer/map_viewer/rovioli/app/: rovioli-app.cc
map_viewer/map_viewer/rovioli/include/lightweight_filtering/: Prediction.hpp  Update.hpp
map_viewer/map_viewer/rovioli/include/rovio/: ImgUpdate.hpp  RovioInterfaceImplInl.hpp  RovioInterfaceStates.hpp  RovioInterfaceStatesImpl.hpp
map_viewer/map_viewer/rovioli/include/rovioli/: data-publisher-flow.h  datasource-rosbag.h  feature-tracking-flow.h  flow-topics.h  localizer-flow.h  localizer.h  map-builder-flow.h  pose_update_flow.h  ros-helpers.h  rovio-estimate.h  rovio-flow.h  rovioli-node.h  vio-update-builder.h
map_viewer/map_viewer/rovioli/src/: data-publisher-flow.cc  datasource-factory.cc  datasource-rosbag.cc  feature-tracking.cc  imu-camera-synchronizer.cc  localizer.cc  map-builder-flow.cc  rovio-factory.cc  rovio-flow.cc  rovioli-node.cc  vio-update-builder.cc
script/bag_conv/: run.sh
script/bag_img/: run.sh
script/check_simi/: run.sh  run_blur.sh  run_test.sh
script/choose_cali_img/: run.sh
script/filter_cali/: run.sh
src/algo/: CMakeLists.txt  package.xml
src/algo/include/: Converter.h  Frame.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  Tracking.h
src/algo/src/: Converter.cc  Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  Tracking.cc
src/bag_2_img/: CMakeLists.txt  package.xml
src/bag_2_img/src/: main.cpp
src/bagconvert/: CMakeLists.txt
src/bagconvert/src/: main.cpp
src/check_simi/: CMakeLists.txt  package.xml
src/check_simi/src/: demo_general.cpp
src/choose_cali_img/: CMakeLists.txt  package.xml
src/choose_cali_img/src/: main.cpp
src/cloud_expand/: CMakeLists.txt  package.xml
src/cloud_expand/config/: camera.yaml
src/cloud_expand/msg/: connection.msg
src/cloud_expand/src/: main.cpp
src/cloud_expand/src/save_bag/: img_chamo.h
src/filter_blur/: CMakeLists.txt  package.xml
src/filter_blur/src/: main.cpp
(+11 files in other folders)
